--- a/application-dev.properties
+++ b/application-dev.properties
@@ -1,3 +1,4 @@
+spring.profiles=dev
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/test2?useSSL=false
 spring.datasource.username=root
